# OObee-Illumination-Repository

./: .gitmodules  CMakeLists.txt  Side_LEDs.cpp  Side_LEDs.h  main.cpp
pico_neopixels/: ws2812byte.pio
